[profile.dev]
debug = true
lto = "thin"
opt-level = 3
panic = "abort"

[profile.release]
debug = true
lto = "thin"
opt-level = 3
panic = "abort"

[workspace]
members = [
    "advent",
    "advent_macro",
    "eight",
    "five",
    "four",
    "nine",
    "one",
    "parse",
    "parse_macro",
    "seven",
    "six",
    "ten",
    "three",
    "two",
]
resolver = "2"
