[workspace]
members = [
    "support/advent",
    "support/advent_macro",
    "eight",
    "eleven",
    "five",
    "four",
    "fourteen",
    "nine",
    "one",
    "support/parse",
    "support/parse_macro",
    "seven",
    "six",
    "ten",
    "thirteen",
    "three",
    "twelve",
    "two",
]
resolver = "2"

[workspace.dependencies]
advent = { path = "support/advent" }
advent_macro = { path = "support/advent_macro" }
combine = "4.6.7"
parse = { path = "support/parse" }
parse_macro = { path = "support/parse_macro" }
